<resources>
    <string name="app_name">SmartRoster</string>
    <string name="smart_roster">Smart Roster</string>
    <string name="login">Login</string>
    <string name="register">Register</string>

    <string name="longin_title">Smart Roster - Login</string>
    <string name="user_id">User ID</string>
    <string name="email">Email</string>

    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="title_activity_register">Register</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register_title">Smart Roster - Register</string>
    <string name="login_invalid_message">Please check your user name or password.</string>
    <string name="login_successful_message">Login in successful.</string>
    <string name="firebase_database_error_message">Failed to get data from database</string>
    <string name="register_adduser_succ">Add user successful</string>
    <string name="register_user_exist_message">User name is existed</string>
    <string name="register_password_info_message">Password length is (6-20).\nPassword must contain letters and special character.\nAt least 1 uper letter, 1 lower letter and 1 special character.</string>
    <string name="register_password_nomatch_message">Two passwords are not match.</string>
    <string name="register_username_info_message">User length is (6-16)\nUser name must not contain special charcter except \"_\".\nFirst letter must a letter.</string>
    <string name="title_activity_over_view">OverViewActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Unknow Name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="available_time">Available Time</string>
    <string name="menu_user_profile">User Profile</string>
    <string name="menu_setting">Setting</string>

    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="user_profile_phone_number">Phone Number</string>
    <string name="setting">Setting</string>
    <string name="roster">Roster</string>
    <string name="date_picker">Date picker</string>
    <string name="manage_group">Manage Group</string>

</resources>
