<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_roster"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/roster" />
        <item
            android:id="@+id/nav_avaliable_time"
            android:icon="@drawable/ic_today_black_24dp"
            android:title="@string/available_time" />

    </group>
    <group>
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/menu_user_profile" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_applications_black_24dp"
            android:title="@string/menu_setting" />
        />
    </group>
</menu>
